# WUT-master-thests-project

./: .gitignore  .gitmodules  README.md  start.txt  startsitl.sh
scripts/: cdlogs.sh  urdfupdate.sh
src/: .rosinstall  .rosinstall.bak
src/ardrone_helpers/.svn/: wc.db
src/ardrone_helpers/joy/: joy_node
src/dji_sdk_demo/: CMakeLists.txt
src/dji_sdk_demo/include/dji_sdk_demo/: demo_camera_gimbal.h  demo_flight_control.h  demo_local_position_control.h  demo_mfio.h  demo_mission.h  demo_mobile_comm.h
src/dji_sdk_demo/src/: demo_camera_gimbal.cpp  demo_flight_control.cpp  demo_local_position_control.cpp  demo_mfio.cpp  demo_mission.cpp  demo_mobile_comm.cpp
src/iq_gnc/: CMakeLists.txt
src/iq_gnc/include/: gnc_functions.hpp
src/iq_gnc/src/: avoidance_sol.cpp  gnc_tutorial.cpp  set_wp.cpp  square.cpp  wall_following.cpp
src/joystick_drivers/spacenav_node/launch/: classic.launch
src/joystick_drivers/wiimote/: package.xml
src/motion_plan/scripts/: bug2.py
src/orb_slam3_ros_wrapper/: CMakeLists.txt
src/orb_slam3_ros_wrapper/config/: EuRoC_stereo_inertial_non_rectified.yaml  ros_stereo_fhd.yaml  ros_stereo_vga.yaml  zed2i_mono.yaml  zed2i_stereo_inertial_rectified.yaml  zed2i_stereo_rectified.yaml
src/orb_slam3_ros_wrapper/include/: common.h
src/orb_slam3_ros_wrapper/launch/: orb_slam3_mono_euroc.launch  orb_slam3_mono_inertial_euroc.launch  orb_slam3_rgbd_tum.launch  orb_slam3_stereo_euroc.launch  orb_slam3_stereo_inertial_euroc.launch
src/orb_slam3_ros_wrapper/src/: common.cc  mono_inertial_node.cc  mono_node.cc  rgbd_node.cc  stereo_inertial_node.cc  stereo_node.cc
src/panporter_pkg/: CMakeLists.txt  README.md  package.xml
src/panporter_pkg/config/: panporter_control.yaml
src/panporter_pkg/include/panporter_pkg/: MyRobot_hardware_interface.h
src/panporter_pkg/launch/: panporter_complete.launch  panporter_evolution.launch  panporter_gazebo.launch  panporter_spawner.launch  panporter_view.launch
src/panporter_pkg/materials/scripts/: repeated.material
src/panporter_pkg/meshes/robot_parts/: robot_cover.geo  robot_cover.stl  torus2.dae  wheel.geo  wheel.stl  wheel2_lite.stl  wheel_lite.geo
src/panporter_pkg/meshes/sensors/: zed.stp  zed2.dae
src/panporter_pkg/rviz/: config.rviz
src/panporter_pkg/src/: ContactPlugin.cc  ContactPlugin.hh  my_motion.cpp  odom.cpp  panporter_control.cpp  pid.cpp  pid.h  teleop_joy.cpp
src/panporter_pkg/urdf/: base_link.step  base_link_gmsh.geo  panporter.urdf  panporter.urdf.xacro  panporter.urdf_old.xacro  panporter_evol.urdf.xacro  panporter_old.urdf  panporter_old2.urdf  robot_cover.stl  wheel.geo  wheel.msh  wheel.stl
src/panporter_pkg/worlds/: arxiv.world  evolution.sdf  maze.world
src/panporter_pkg/worlds/arxiv2/: model.config  model.sdf
src/panporter_pkg/worlds/arxiv_maze.world/: model.config  model.sdf
src/panporter_pkg/worlds/maze/: model.sdf
src/parrot_ardrone/drone_construct/launch/: main.launch  put_robot_in_world.launch  start_world.launch
src/parrot_ardrone/drone_construct/scripts/: start_simulation_localy.sh
src/parrot_ardrone/drone_construct/worlds/: ardrone_gisworld.world  ardrone_igniteworld.world  ardrone_inkubworld.world  ardrone_inkubworld2.world  ardrone_inkubworld3.world  ardrone_test_world.world  small_city.world
src/parrot_ardrone/sjtu-drone/src/: drone_object_ros.cpp
src/ros_cv/: CMakeLists.txt  package.xml
src/ros_cv/include/: Grayscaler.hpp
src/ros_cv/src/: Grayscaler.cpp
